--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         #container {
             padding: 50px;
-            background-color: #FFA;
+            background-color: #FFF;
         }
     </style>
 </head>
@@ -18,17 +18,20 @@
 <body>
     <div id='container'></div>
     <script type="text/babel">
+
         const Card = React.createClass({
-            render: function(){
-              const cardStyle =  {
-                height: 200,
-                width: 150,
-                backgroundColor: "#FFF",
-                WebkitFilter: "drop-shadow(0px 0px 5px #667)",
-                filter:"drop-shadow(0px 0px 5px #667)"
-            };
-            return (<div style={cardStyle}></div>)
-        }
+            render: function() {
+                const cardStyle =  {
+                    height: 200,
+                    width: 150,
+                    backgroundColor: "#FFF",
+                    WebkitFilter: "drop-shadow(0px 0px 5px #666)",
+                    filter:"drop-shadow(0px 0px 5px #666)"
+                };
+                return (
+                    <div style={cardStyle}></div>
+                );
+            },
             
         });
 
@@ -46,9 +49,10 @@
 
         ReactDOM.render(
             <div>
+                <Card/>
             </div>, 
             document.querySelector("#container")
-            );
+        );
     </script>
 </body>
 
