--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     filter:"drop-shadow(0px 0px 5px #666)"
                 };
                 return (
-                    <div style={cardStyle}></div>
+                    <div style={cardStyle}>
+                        <Square/>
+                    </div>
                 );
             },
             
@@ -37,7 +39,11 @@
 
         const Square = React.createClass({
             render: function(){
-                <p>Nothing</p>
+                const squareStyle = {
+                    height: 150,
+                    backgroundColor: "#FF6663"
+                };
+                return <div style={squareStyle}></div>;
             }
         });
 
