--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 };
 
                 return(
-                <p style={labelStyle}>{this.props.color}</p>
+                <p style={labelStyle}>{this.props.color }</p>
                 );
             }
         });
@@ -62,8 +62,8 @@
                 };
                 return (
                     <div style={cardStyle}>
-                        <Square color={this.props.color}/>
-                        <Label color={this.props.color}/>
+                        <Square {...this.props}/>
+                        <Label {...this.props}/>
                     </div>
                 );
             },
@@ -72,7 +72,7 @@
 
         ReactDOM.render(
             <div>
-                <Card color="#DF5"/>
+                <Card color="#EF5"/>
                 <Card color="#AFF"/>
                 <Card color="#DDD"/>
             </div>, 
